# prodigybuild-testing

./: App.test.jsx  Prod_github_testing  README.md  README2.md  README3.md  Sep11  Test1  Test12sep  Testfile  aaaa  app.jsx  ccccc  ffdfs  index.js  index.spec.jsx  newtest  test  test 4  test1  test1.py  test123  test123_13sep  test18_1  test18_2  test2  test21  test3  test4  test5  test5-24  test50k  test51  test52  test53  test55  test5_9sep1  test6  test9  test_18  test_8thsep_1  (+8 more)
c/: a.c
c/algorithms/: BST.c  BST.test.c  BST_1.c  BST_2.c  BSTtest.c  CONTRIBUTING.md  DoublyLL.c  DoublyLL.test.c  DoublyLL_11sep.c  DoublyLL_123.c  DoublyLL_18thJul.c  DoublyLL_28thJune.c  DoublyLL_test.c  DoublyLLtest.c  InsertionDeletionLinkedList.c  InsertionDeletionLinkedList.test.c  InsertionDeletionLinkedList_113.c  InsertionDeletionLinkedListtest.c  README.md  binsearch.c  binsearch.cpp  binsearch.test.c  binsearch1.c  binsearchTest.c  binsearch_1.c  binsearch_123.c  binsearch_1sep.c  binsearch_28thJuly.c  binsearch_9sep.c  binsearch_test_11_sep.c  binsearchtest.c  bubblesort.c  bubblesort.test.c  bubblesort12_3.c  count.c  (+51 more)
cpp/: CMakeLists.txt  clang-format.sh
cpp/examples/AutomaticDifferentiation/: main.cpp  test_main.cpp
cpp/examples/BBPTypeFormula/: test_main.cpp
cpp/examples/FixedPointIteration/: main.cpp  test_main.cpp
cpp/examples/LagrangeInterpolation/: test_main.cpp
cpp/examples/MetropolisHastings/: test_main.cpp
cpp/lib/numericCppExamples/: bbpTypeFormula.h  bbpTypeFormula.test.h  discreteFourierTransform.test.h  lagrangeInterpolation.h  numericalIntegration.h
(+420 files in other folders)
